fix spacing header

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,14 +1,15 @@
 .header-container {
 	background: black;
-	height: 110px;
+	height: 90px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	padding-left: 40px;
+	padding-right: 40px;
 }
 
 .links {
 	display: flex;
-	padding-left: 40px;
 	justify-content: start;
 	flex: 1 1 0%;
 
@@ -16,7 +17,7 @@
 		text-decoration: none;
 		font-size: 16px;
 		color: white;
-		padding-right: 40px;
+		padding-right: 30px;
 	}
 }
 
@@ -27,8 +28,6 @@
 
 .header-icons {
 	display: flex;
-	padding-left: 40px;
-	padding-right: 40px;
 	justify-content: end;
 	flex: 1 1 0%;
 	color: white;
